--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container" [class.is-mobile]="mobileQuery.matches">
+<div class="container" [class.is-mobile]="mobileQuery.matches" [class.iphone-app]="iphoneApp">
   <mat-toolbar color="primary" class="toolbar mat-elevation-z4">
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
