--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,11 +37,24 @@ body {
 }
 
 .ellipsis {
-  text-overflow:ellipsis;
-  white-space:nowrap;
-  overflow:hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .active mat-icon svg {
   fill: map_get(map_get($candy-app-theme, primary), 500);
+}
+
+html, body, .sidenav-container {
+  max-width: 100%;
+  overflow-x: hidden;
+  //
+  //min-height: 100%;
+  //min-height: calc(100% + 20px);
+}
+
+.sidenav-container {
+  min-height: 100%;
+  min-height: calc(100% + 20px - 76px);
 }
