--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,8 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $candy-app-primary: mat-palette($mat-brown);
-$candy-app-accent: mat-palette($mat-yellow, A200, A100, A400);
+$candy-app-accent: mat-palette($mat-brown);
+//$candy-app-accent: mat-palette($mat-yellow, A200, A100, A400);
 
 // Create the theme object (a Sass map containing all of the palettes).
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent);
@@ -17,6 +18,10 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent);
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($candy-app-theme);
+
+* {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 
 input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 30px rgb(245, 245, 245) inset;
