--- a/src/app/views/order/info/order-info.component.html
+++ b/src/app/views/order/info/order-info.component.html
@@ -8,8 +8,8 @@
         <mat-icon>arrow_back</mat-icon>
       </a>
       <span *ngIf="!info.id">Novo pedido</span>
-      <span *ngIf="info.id" [title]="info.name" class="ellipsis">
-          {{(info.name?.length > 40 ? (info.name | slice:0:40) + '...' : info.name)}}
+      <span *ngIf="info.id" [title]="info.description" class="ellipsis">
+          {{(info.description?.length > 40 ? (info.description | slice:0:40) + '...' : info.description)}}
         </span>
       <span style="flex: 1"></span>
       <button mat-icon-button type="button" *ngIf="info.id" [matMenuTriggerFor]="removeMenu" [disabled]="loading"
